dev/utilitaire-nam/microk8s/unam/manifest/unam-service-cluster.yaml
apiVersion: v1
kind: Service
metadata:
        name: unam
        labels:
                app: unam-service
spec:
        selector:
                app: unam-service
        type: ClusterIP
        ports:
                - port: 80
                  targetPort: 80
