dev/utilitaire-nam/microk8s/unam/manifest/unam_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: unam-domain
spec:
    rules:
    - host: unam.inspq.qc.ca
        http:   
            paths:
            - path: /
                backend:
                    serviceName: unam-service
                    servicePort: 5000
